--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app"
+    "start": "node ./bin/www"
   },
   "repository": {
     "type": "git",
@@ -18,10 +18,18 @@
   },
   "homepage": "https://github.com/nfainer/Fainer_Noah_portfolio#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cookie-parse": "^0.4.0",
+    "cookie-parser": "^1.4.4",
+    "debug": "^4.1.1",
     "express": "^4.17.1",
     "hbs": "^4.0.6",
+    "morgan": "^1.9.1",
     "mysql": "^2.17.1",
+    "nodemailer": "^6.4.0",
     "nodemon": "^2.0.1",
-    "sass": "^1.23.7"
+    "parse": "^2.10.0",
+    "sass": "^1.23.7",
+    "serve-favicon": "^2.5.0"
   }
 }
